[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://textures/space_texture.jpg" type="Texture" id=2]

[node name="Menu" type="Node"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 640.0
margin_bottom = 480.0
rect_scale = Vector2( 1.01082, 1.00017 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
margin_right = 640.0
margin_bottom = 480.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="Panel" type="Panel" parent="MarginContainer/TextureRect"]
margin_left = 93.8732
margin_top = 103.662
margin_right = 133.873
margin_bottom = 143.663
rect_scale = Vector2( 11.0449, 7.00406 )

[node name="Label" type="Label" parent="MarginContainer/TextureRect/Panel"]
margin_left = 12.5694
margin_top = 1.2091
margin_right = 124.57
margin_bottom = 15.2091
rect_scale = Vector2( 0.12176, 0.206584 )
text = "Cenas"
align = 1

[node name="seek" type="Button" parent="MarginContainer/TextureRect/Panel"]
margin_left = 6.21744
margin_top = 8.03095
margin_right = 76.2174
margin_bottom = 28.031
rect_scale = Vector2( 0.15, 0.25 )
action_mode = 0
text = "Seek"

[node name="flee" type="Button" parent="MarginContainer/TextureRect/Panel"]
margin_left = 22.1215
margin_top = 8.49528
margin_right = 93.1215
margin_bottom = 28.4953
rect_scale = Vector2( 0.15, 0.25 )
action_mode = 0
text = "flee"

[node name="wander" type="Button" parent="MarginContainer/TextureRect/Panel"]
margin_left = 21.6841
margin_top = 17.2831
margin_right = 92.6841
margin_bottom = 37.2831
rect_scale = Vector2( 0.15, 0.25 )
action_mode = 0
text = "wander"

[node name="arrival" type="Button" parent="MarginContainer/TextureRect/Panel"]
margin_left = 6.37352
margin_top = 17.3364
margin_right = 77.3735
margin_bottom = 37.3364
rect_scale = Vector2( 0.15, 0.25 )
action_mode = 0
text = "arrival"

[node name="pursuit" type="Button" parent="MarginContainer/TextureRect/Panel"]
margin_left = 5.72369
margin_top = 26.2297
margin_right = 76.7237
margin_bottom = 46.2297
rect_scale = Vector2( 0.15, 0.25 )
action_mode = 0
text = "pursuit"

[node name="evade" type="Button" parent="MarginContainer/TextureRect/Panel"]
margin_left = 22.353
margin_top = 26.3903
margin_right = 93.353
margin_bottom = 46.3903
rect_scale = Vector2( 0.15, 0.25 )
action_mode = 0
text = "evade"

[node name="Info" type="Button" parent="MarginContainer/TextureRect/Panel"]
margin_left = 34.2641
margin_top = 40.771
margin_right = 71.2641
margin_bottom = 60.771
rect_scale = Vector2( 0.15, 0.25 )
text = "Info"
[connection signal="pressed" from="MarginContainer/TextureRect/Panel/seek" to="." method="_on_seek_pressed"]
[connection signal="pressed" from="MarginContainer/TextureRect/Panel/flee" to="." method="_on_flee_pressed"]
[connection signal="pressed" from="MarginContainer/TextureRect/Panel/wander" to="." method="_on_wander_pressed"]
[connection signal="pressed" from="MarginContainer/TextureRect/Panel/arrival" to="." method="_on_arrival_pressed"]
[connection signal="pressed" from="MarginContainer/TextureRect/Panel/pursuit" to="." method="_on_pursuit_pressed"]
[connection signal="pressed" from="MarginContainer/TextureRect/Panel/evade" to="." method="_on_evade_pressed"]
[connection signal="pressed" from="MarginContainer/TextureRect/Panel/Info" to="." method="_on_Info_pressed"]
